# aoc-2024

./: .gitignore  Cargo.toml  README.md
benches/: aoc_bench.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs  main.rs
